Get all persons in a single batch